// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleTicketList/> should fetch the tickets on render 1`] = `
[
  [
    1,
    {
      "cursor": undefined,
      "limit": 10,
    },
  ],
]
`;

exports[`<RuleTicketList/> should render the rule ticket list 1`] = `
<div>
  <table
    class="wrapper table"
  >
    <thead>
      <tr>
        <th
          colspan="2"
        >
          ticket information
        </th>
        <th>
          created
        </th>
        <th>
          channel
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="avatar"
        >
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="component square"
                style="width: 30px; height: 30px;"
              >
                <div
                  class="initials"
                  style="width: 30px; height: 30px; font-size: 12.5px;"
                >
                  <span
                    style="line-height: 32px;"
                  >
                    AP
                  </span>
                </div>
              </div>
            </div>
          </a>
        </td>
        <td
          class="ticketInfo"
        >
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="ticketSubject"
              >
                Great ticket
              </div>
              <div
                class="ticketDescription"
              />
            </div>
          </a>
        </td>
        <td>
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              31/07/2017
            </div>
          </a>
        </td>
        <td>
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <i
                class="icon source-icon d-inline-block material-icons secondary"
              >
                email
              </i>
            </div>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<RuleTicketList/> should show navigation if response has cursor 1`] = `
<div>
  <table
    class="wrapper table"
  >
    <thead>
      <tr>
        <th
          colspan="2"
        >
          ticket information
        </th>
        <th>
          created
        </th>
        <th>
          channel
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class="avatar"
        >
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="component square"
                style="width: 30px; height: 30px;"
              >
                <div
                  class="initials"
                  style="width: 30px; height: 30px; font-size: 12.5px;"
                >
                  <span
                    style="line-height: 32px;"
                  >
                    AP
                  </span>
                </div>
              </div>
            </div>
          </a>
        </td>
        <td
          class="ticketInfo"
        >
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <div
                class="ticketSubject"
              >
                Great ticket
              </div>
              <div
                class="ticketDescription"
              />
            </div>
          </a>
        </td>
        <td>
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              31/07/2017
            </div>
          </a>
        </td>
        <td>
          <a
            to="/app/ticket/152"
          >
            <div
              class="cellWrapper"
            >
              <i
                class="icon source-icon d-inline-block material-icons secondary"
              >
                email
              </i>
            </div>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="navigation"
  >
    <div
      class="ui-buttongroup-group-fd03"
      style="display: flex;"
    >
      <button
        aria-disabled="true"
        class="ui-button-wrapper-a432 wrapper ui-button-fill-a432 ui-button-secondary-a432 ui-button-isdisabled-a432"
        id="prev-btn"
        type="button"
      >
        <span
          class="ui-button-content-a432"
        >
          <i
            class="material-icons icon"
          >
            keyboard_arrow_left
          </i>
        </span>
      </button>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 wrapper ui-button-fill-a432 ui-button-secondary-a432"
        id="next-btn"
        type="button"
      >
        <span
          class="ui-button-content-a432"
        >
          <i
            class="material-icons icon"
          >
            keyboard_arrow_right
          </i>
        </span>
      </button>
    </div>
  </div>
</div>
`;
